NAVEGABILIDAD ENTRE _LAYOUT Y MyEnrolledCourses

--- a/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -287,6 +287,12 @@
                                     <div class="sb-nav-link-icon"><i class="fas fa-home"></i></div>
                                     Inicio
                                 </a>
+                                <!-- Seccion Cursos Inscritos-->
+                                <div class="sb-sidenav-menu-heading">Cursos</div>
+                                <a class="nav-link" asp-area="" asp-controller="Student" asp-action="MyEnrolledCourses">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-chalkboard"></i></div>
+                                    Cursos Inscritos
+                                </a>
                                 <!-- Seccion Actualizar Información-->
                                 <div class="sb-sidenav-menu-heading">Actualizar Perfil</div>
                                 <a class="nav-link" asp-area="" asp-controller="User" asp-action="UpdateInfoUser">
