CORRECION DE ERROR EN VISTA DELETECOURSEASSIGNMENT

--- a/KM.SysControlAdmin.WebApp/Views/CourseAssignment/DeleteCourseAssignment.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/CourseAssignment/DeleteCourseAssignment.cshtml
@@ -92,7 +92,7 @@
     </div>
 </div>
 <br />
-<form id="Form" asp-action="Delete" onsubmit="CreateRecord(event)">
+<form id="Form" asp-action="DeleteCourseAssignment" onsubmit="CreateRecord(event)">
     <input type="hidden" asp-for="Id" />
     <a class="btn btn-outline-secondary" asp-action="Index">Regresar a La Lista</a> |
     <input type="submit" value="Eliminar Asignación" class="btn btn-danger" />
