--- a/KM.SysControlAdmin.WebApp/Views/Course/DeleteCourse.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Course/DeleteCourse.cshtml
@@ -74,11 +74,11 @@
         <dd class="col-sm-10">
             @if (Model.Status == 1)
             {
-                <span>Activo</span>
+                <span>ACTIVO</span>
             }
             else if (Model.Status == 2)
             {
-                <span>Inactivo</span>
+                <span>INACTIVO</span>
             }
         </dd>
         <dt class="col-sm-2">@Html.DisplayNameFor(model => model.DateCreated)</dt>
