--- a/KM.SysControlAdmin.WebApp/Views/Course/EditCourse.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Course/EditCourse.cshtml
@@ -8,7 +8,7 @@
     List<Schedule> schedules = ViewBag.Schedule as List<Schedule>;
 }
 
-<link href="/css/Course/DesignCreateAndEdit.css" rel="stylesheet" />
+<link href="~/css/Course/DesignCreateAndEdit.css" rel="stylesheet" />
 
 <br />
 <h1>Formulario - Modificar Curso</h1>
