--- a/KM.SysControlAdmin.WebApp/Views/Role/EditRole.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Role/EditRole.cshtml
@@ -21,9 +21,9 @@
                 <label for="status"><strong>Estado:</strong></label>
                 <br />
                 <select id="status" class="swal2-select">
-                    <option value="0">Seleccionar</option>
-                    <option value="1" ${@Model.Status == 1 ? "selected" : ""}>Activo</option>
-                    <option value="2" ${@Model.Status == 2 ? "selected" : ""}>Inactivo</option>
+                    <option value="0">SELECCIONAR</option>
+                    <option value="1" ${@Model.Status == 1 ? "selected" : ""}>ACTIVO</option>
+                    <option value="2" ${@Model.Status == 2 ? "selected" : ""}>INACTIVO</option>
                 </select>
             `,
             showCancelButton: true,
