--- a/KM.SysControlAdmin.WebApp/Views/Role/Index.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Role/Index.cshtml
@@ -55,11 +55,11 @@
                 </td>
                 @if (item.Status == 1)
                 {
-                    <td>Activo</td>
+                    <td>ACTIVO</td>
                 }
                 else if (item.Status == 2)
                 {
-                    <td>Inactivo</td>
+                    <td>INACTIVO</td>
                 }
                 <td>
                     @Html.DisplayFor(modelItem => item.DateCreatedFormatted) @Html.DisplayFor(modelItem => item.TimeCreatedFormatted)
