--- a/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
     {
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
             <!-- Navbar Brand-->
-            <a class="navbar-brand ps-1" style="color:white" asp-area="" asp-controller="Home" asp-action="Index"><img src="/assets/img/logos/Icon Kerigma Music.png" width="20" style="margin-right:3px; margin-left:25px; margin-bottom:3px" alt="Logo" /> Kerigma Music</a>
+            <a class="navbar-brand ps-1" style="color:white" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/assets/img/logos/Icon Kerigma Music.png" width="20" style="margin-right:3px; margin-left:25px; margin-bottom:3px" alt="Logo" /> Kerigma Music</a>
             <!-- Sidebar Toggle-->
             <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
             <!-- Navbar Search-->
