--- a/KM.SysControlAdmin.WebApp/Views/Student/GeneratePDFfileStudent.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Student/GeneratePDFfileStudent.cshtml
@@ -10,7 +10,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ficha Alumno/a @Html.DisplayFor(model => model.Name)_@Html.DisplayFor(model => model.LastName)_@Html.DisplayFor(model => model.StudentCode)_KM</title>
-    <link href="/css/Student/DesignGeneratePDF.css" rel="stylesheet" />
+    <link href="~/css/Student/DesignGeneratePDF.css" rel="stylesheet" />
 </head>
 <body>
     <!-- Encavezado -->
