--- a/KM.SysControlAdmin.WebApp/Views/Trainer/EditTrainer.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Trainer/EditTrainer.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Modificar Instructor";
 }
 
-<link href="/css/Trainer/DesignCreateAndEdit.css" rel="stylesheet" />
+<link href="~/css/Trainer/DesignCreateAndEdit.css" rel="stylesheet" />
 
 <br />
 <h1>Formulario - Modificar Instructor</h1>
