--- a/KM.SysControlAdmin.WebApp/Views/User/DeleteUser.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/User/DeleteUser.cshtml
@@ -29,11 +29,11 @@
                 <dt class="col-sm-4">@Html.DisplayNameFor(model => model.Status)</dt>
                 @if (Model.Status == 1)
                 {
-                    <dd class="col-sm-8">Activo</dd>
+                    <dd class="col-sm-8">ACTIVO</dd>
                 }
                 else if (Model.Status == 2)
                 {
-                    <dd class="col-sm-8">Inactivo</dd>
+                    <dd class="col-sm-8">INACTIVO</dd>
                 }
 
                 <dt class="col-sm-4">@Html.DisplayNameFor(model => model.RecoveryEmail)</dt>
