--- a/KM.SysControlAdmin.WebApp/Views/User/Information.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/User/Information.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Información del Usuario";
 }
 
-<link href="/css/User/DesignInformation.css" rel="stylesheet" />
+<link href="~/css/User/DesignInformation.css" rel="stylesheet" />
 
 <div class="user-container">
     <div class="user-info">
