--- a/KM.SysControlAdmin.WebApp/Views/Course/DetailsCourse.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Course/DetailsCourse.cshtml
@@ -72,11 +72,11 @@
         <dd class="col-sm-10">
             @if (Model.Status == 1)
             {
-                <span>Activo</span>
+                <span>ACTIVO</span>
             }
             else if (Model.Status == 2)
             {
-                <span>Inactivo</span>
+                <span>INACTIVO</span>
             }
         </dd>
         <dt class="col-sm-2">@Html.DisplayNameFor(model => model.DateCreated)</dt>
@@ -104,10 +104,10 @@
 
         document.addEventListener("DOMContentLoaded", function () {
             // Mostrar alerta de ViewBag.Error si es necesario
-        @if (!string.IsNullOrEmpty(ViewBag.Error))
-        {
-            @:showErrorAlert('@ViewBag.Error');
-        }
+            @if (!string.IsNullOrEmpty(ViewBag.Error))
+            {
+                @:showErrorAlert('@ViewBag.Error');
+            }
 
             // Agregar el evento de clic al botón de modificar
             const modifyButton = document.getElementById('modifyButton');
