--- a/KM.SysControlAdmin.WebApp/Views/CourseAssignment/EditCourseAssignment.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/CourseAssignment/EditCourseAssignment.cshtml
@@ -8,7 +8,7 @@
     List<Course> courses = ViewBag.Course as List<Course>;
 }
 
-<link href="/css/CourseAssignment/DesignCreateAndEdit.css" rel="stylesheet" />
+<link href="~/css/CourseAssignment/DesignCreateAndEdit.css" rel="stylesheet" />
 
 <br />
 <h1>Formulario - Modificar Asignación</h1>
@@ -26,7 +26,7 @@
                 <div class="form-group">
                     <label asp-for="IdStudent" class="control-label"></label>
                     <select class="select2 form-select" name="IdStudent" id="IdStudent">
-                        <option selected value="">Seleccionar</option>
+                        <option selected value="">SELECCIONAR</option>
                         @foreach (var item in students!)
                         {
                             <option value="@item.Id">@item.Name @item.LastName</option>
@@ -74,7 +74,7 @@
                 <div class="form-group">
                     <label asp-for="IdCourse" class="control-label"></label>
                     <select class="select2 form-select" name="IdCourse" id="IdCourse">
-                        <option selected value="">Seleccionar</option>
+                        <option selected value="">SELECCIONAR</option>
                         @foreach (var item in courses!)
                         {
                             <option value="@item.Id">@item.Name</option>
@@ -173,7 +173,6 @@
                         type: 'GET',
                         data: { id: studentId },
                         success: function (data) {
-                            console.log('Datos del estudiante:', data);
                             if (data.error) {
                                 showErrorAlert(data.error);
                             } else {
@@ -211,7 +210,6 @@
                         type: 'GET',
                         data: { id: courseId },
                         success: function (data) {
-                            console.log('Datos del curso:', data);
                             if (data.error) {
                                 showErrorAlert(data.error);
                             } else {
