--- a/KM.SysControlAdmin.WebApp/Views/Home/Index.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Home/Index.cshtml
@@ -2,33 +2,13 @@
     ViewData["Title"] = "Inicio";
 }
 
-<link href="/css/Home/DesignHome.css" rel="stylesheet" />
+<link href="~/css/Home/DesignHome.css" rel="stylesheet" />
 
-@if (User.IsInRole("Desarrollador"))
+@if (User.IsInRole("Desarrollador") || User.IsInRole("Administrador") || User.IsInRole("Secretario/a"))
 {
     <div class="bienvenida">
         <div>
-            <img class="elimLogo" src="/assets/img/logos/Logo Kerigma Music.png" alt="Alternate Text" width="200" />
-            <h3 class="font-weight-bold">¡Bienvenido De Vuelta!</h3>
-            <h6 class="font-weight-normal mb-0">Sistema De Control Administrativo - Kerigma Music / IFAD</h6>
-        </div>
-    </div>
-}
-else if (User.IsInRole("Administrador"))
-{
-    <div class="bienvenida">
-        <div>
-            <img class="elimLogo" src="/assets/img/logos/Logo Kerigma Music.png" alt="Alternate Text" width="200" />
-            <h3 class="font-weight-bold">¡Bienvenido De Vuelta!</h3>
-            <h6 class="font-weight-normal mb-0">Sistema De Control Administrativo - Kerigma Music / IFAD</h6>
-        </div>
-    </div>
-}
-else if (User.IsInRole("Secretario/a"))
-{
-    <div class="bienvenida">
-        <div>
-            <img class="elimLogo" src="/assets/img/logos/Logo Kerigma Music.png" alt="Alternate Text" width="200" />
+            <img class="kerigmalogo" src="~/assets/img/logos/Logo Kerigma Music.png" alt="Alternate Text" width="200" />
             <h3 class="font-weight-bold">¡Bienvenido De Vuelta!</h3>
             <h6 class="font-weight-normal mb-0">Sistema De Control Administrativo - Kerigma Music / IFAD</h6>
         </div>
@@ -38,7 +18,7 @@ else if (User.IsInRole("Instructor"))
 {
     <div class="bienvenida">
         <div>
-            <img class="elimLogo" src="/assets/img/logos/Logo Kerigma Music.png" alt="Alternate Text" width="200" />
+            <img class="kerigmalogo" src="~/assets/img/logos/Logo Kerigma Music.png" alt="Alternate Text" width="200" />
             <h3 class="font-weight-bold">¡Bienvenido De Vuelta!</h3>
             <h6 class="font-weight-normal mb-0">Portal Del Instructor - Kerigma Music / IFAD</h6>
         </div>
@@ -48,7 +28,7 @@ else if (User.IsInRole("Alumno/a"))
 {
     <div class="bienvenida">
         <div>
-            <img class="elimLogo" src="/assets/img/logos/Logo Kerigma Music.png" alt="Alternate Text" width="200" />
+            <img class="kerigmalogo" src="~/assets/img/logos/Logo Kerigma Music.png" alt="Alternate Text" width="200" />
             <h3 class="font-weight-bold">¡Bienvenido De Vuelta!</h3>
             <h6 class="font-weight-normal mb-0">Portal Del Alumno/a - Kerigma Music / IFAD</h6>
         </div>
@@ -58,7 +38,7 @@ else if (User.IsInRole("Invitado"))
 {
     <div class="bienvenida">
         <div>
-            <img class="elimLogo" src="/assets/img/logos/Logo Kerigma Music.png" alt="Alternate Text" width="200" />
+            <img class="kerigmalogo" src="~/assets/img/logos/Logo Kerigma Music.png" alt="Alternate Text" width="200" />
             <h3 class="font-weight-bold">¡Bienvenido De Vuelta!</h3>
             <h6 class="font-weight-normal mb-0">Sistema De Control Administrativo - Kerigma Music / IFAD</h6>
         </div>
