--- a/KM.SysControlAdmin.WebApp/Views/Student/CreateExternalForm.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Student/CreateExternalForm.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Agregar Alumno/a";
 }
 
-<link href="/css/Student/DesignCreateAndEdit.css" rel="stylesheet" />
+<link href="~/css/Student/DesignCreateAndEdit.css" rel="stylesheet" />
 
 <br />
 <h1>Formulario - Agregar Alumno/a</h1>
@@ -123,7 +123,7 @@
                 <div class="form-group">
                     <label asp-for="IdRole" class="control-label"></label>
                     <select class="form-select">
-                        <option selected value="">Alumno</option>
+                        <option>ALUMNO</option>
                     </select>
                 </div>
                 <div class="form-group">
