--- a/KM.SysControlAdmin.WebApp/Views/Student/EditScholarshipForm.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Student/EditScholarshipForm.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Modificar Alumno/a";
 }
 
-<link href="/css/Student/DesignCreateAndEdit.css" rel="stylesheet" />
+<link href="~/css/Student/DesignCreateAndEdit.css" rel="stylesheet" />
 
 <br />
 <h1>Formulario - Modificar Alumno/a</h1>
