--- a/KM.SysControlAdmin.WebApp/Views/Student/Index.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Student/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Alumnos/as";
 }
 
-<link href="/css/Student/DesignCreateAndEdit.css" rel="stylesheet" />
+<link href="~/css/Student/DesignCreateAndEdit.css" rel="stylesheet" />
 
 <br />
 <h3>Mantenimiento De Alumnos/as</h3>
