--- a/KM.SysControlAdmin.WebApp/Views/Trainer/CreateTrainer.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Trainer/CreateTrainer.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Crear Instructor   ";
 }
 
-<link href="/css/Trainer/DesignCreateAndEdit.css" rel="stylesheet" />
+<link href="~/css/Trainer/DesignCreateAndEdit.css" rel="stylesheet" />
 
 <br />
 <h1>Formulario - Crear Nuevo Instructor</h1>
@@ -47,7 +47,7 @@
                 <div class="form-group">
                     <label asp-for="Gender" class="control-label"></label>
                     <select name="Gender" class="form-select" required>
-                        <option selected value="">Seleccionar</option>
+                        <option selected value="">SELECCIONAR</option>
                         <option value="MASCULINO">MASCULINO</option>
                         <option value="FEMENINO">FEMENINO</option>
                     </select>
@@ -117,7 +117,7 @@
                 <div class="form-group">
                     <label asp-for="IdRole" class="control-label"></label>
                     <select class="form-select">
-                        <option selected>Instructor</option>
+                        <option selected>INSTRUCTOR</option>
                     </select>
                 </div>
                 <div class="form-group">
