--- a/KM.SysControlAdmin.WebApp/Views/Trainer/Index.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Trainer/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Instructores";
 }
 
-<link href="/css/Trainer/DesignCreateAndEdit.css" rel="stylesheet" />
+<link href="~/css/Trainer/DesignCreateAndEdit.css" rel="stylesheet" />
 
 <br />
 <h3>Mantenimiento De Instructores</h3>
