--- a/KM.SysControlAdmin.WebApp/Views/Trainer/MyAssignedCourses.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Trainer/MyAssignedCourses.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Mis Cursos Asignados";
 }
 
-<link href="/css/Trainer/DesignCreateAndEdit.css" rel="stylesheet" />
+<link href="~/css/Trainer/DesignCreateAndEdit.css" rel="stylesheet" />
 
 <br />
 <h3>Mis Cursos Asignados</h3>
