--- a/KM.SysControlAdmin.WebApp/Views/User/ForgotPassword.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/User/ForgotPassword.cshtml
@@ -33,7 +33,7 @@
             <div class="card shadow-lg">
                 <div class="card-body text-center text-black">
                     <br />
-                    <img src="/assets/img/logos/Logo Kerigma Music.png" alt="Logo Oficial" width="200" />
+                    <img src="~/assets/img/logos/Logo Kerigma Music.png" alt="Logo Oficial" width="200" />
                     <br />
                     <h4>Validar Usuario Para Recuperar Contraseña</h4>
                 </div>
@@ -47,7 +47,7 @@
                             <input type="email" name="email" class="form-control" required placeholder="Introduce tu correo" />
                         </div>
                         <button type="submit" class="btn btn-primary w-100 mt-3">Verificar Correo Electrónico</button>
-                        <a href="/Home/Index" class="btn btn-secondary w-100 mt-3">Regresar al Inicio</a>
+                        <a href="@Url.Action("Index", "Home")" class="btn btn-secondary w-100 mt-3">Regresar al Inicio</a>
                     </form>
                 </div>
             </div>
