--- a/KM.SysControlAdmin.WebApp/Views/User/Login.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/User/Login.cshtml
@@ -8,7 +8,7 @@
     <div class="card shadow-lg border-0 rounded-lg" style="max-width: 400px; width: 100%;">
         <div class="card-header text-center">
             <br />
-            <img src="/assets/img/logos/Logo Kerigma Music.png" width="50%" alt="Logo Oficial" />
+            <img src="~/assets/img/logos/Logo Kerigma Music.png" width="50%" alt="Logo Oficial" />
             <br />
         </div>
         <div class="card-body">
