--- a/KM.SysControlAdmin.WebApp/Views/User/PasswordSentUser.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/User/PasswordSentUser.cshtml
@@ -16,7 +16,7 @@
             allowOutsideClick: false
         }).then((result) => {
             if (result.isConfirmed) {
-                window.location.href = '/Home/Index';
+                window.location.href = '@Url.Action("Index", "Home")';
             }
         });
     </script>
