--- a/KM.SysControlAdmin.WebApp/Views/User/UpdateInfoUser.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/User/UpdateInfoUser.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Actualizar Información";
 }
 
-<link href="/css/User/DesignCreateAndEdit.css" rel="stylesheet" />
+<link href="~/css/User/DesignCreateAndEdit.css" rel="stylesheet" />
 
 <br />
 <h1>Formulario Modificar Usuario</h1>
